# lights-on

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  lightson.cabal  stack.yaml
persistence/: LICENSE  persistence.cabal
persistence/schema-migrations/: 1.sql
persistence/src/Internal/: Types.hs
persistence/src/Persistence/: Session.hs  Statement.hs
web/: web.cabal
web-ui/: .gitignore  Makefile  app.html  default.nix  package-lock.json  package.json  spago.dhall
web-ui/assets/: style.css
web-ui/src/: AppM.purs  Main.purs
web-ui/src/Api/: Endpoint.purs  Request.purs  Util.purs
web-ui/src/Api/Request/: Verb.purs
web-ui/src/Capability/Resource/: Player.purs
web-ui/src/Component/: Lights.purs  Ratings.purs  Root.purs  Util.purs
web-ui/src/Component/HTML/: Util.purs
web-ui/src/Data/: Game.purs  Player.purs
web/src/: Lib.hs  Server.hs
web/src/Data/: Score.hs
web/src/Web/: Routes.hs
web/test/Data/: ScoreSpec.hs
