name:                lightson
version:             0.1.0.0
-- synopsis:-- description:
homepage:            https://github.com/nalkuatov/lightson#readme
license:             BSD3
license-file:        LICENSE
author:              Nurlan Alkuatov
maintainer:          nalkuatov@gmail.com
copyright:           2020 Nurlan Alkuatov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lightson-exe
  main-is:             Main.hs
  hs-source-dirs:      .
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , web
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nalkuatov/lightson
