name:                persistence
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nalkuatov/persistence#readme
license:             BSD3
license-file:        LICENSE
author:              Nurlan Alkuatov
maintainer:          nalkuatov@gmail.com
copyright:           2020 Nurlan Alkuatov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Persistence.Session
  other-modules:       Internal.Types
                     , Persistence.Statement
  build-depends:       base >= 4.7 && < 5
                     , text
                     , transformers
                     , hasql
                     , contravariant-extras
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nalkuatov/persistence
